--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,7 @@
 PORT=5000
-MONGO_URI=mongodb://127.0.0.1:27017/health_management
+NODE_ENV=production
+# MONGO_URI=mongodb://127.0.0.1:27017/health_management
+MONGO_URI=mongodb+srv://muthamilgws:dY0sWja8Z5OM98C7@healthcluster.lq6g4.mongodb.net/?retryWrites=true&w=majority&appName=healthcluster
 JWT_SECRET=your_jwt_secret_key
+BACKEND_URL=http://127.0.0.1:5000
+FRONTEND_URL=http://127.0.0.1:3000
